@@ -10,8 +10,7 @@ test -d "$bundle/Contents/Frameworks" || mkdir -p "$bundle/Contents/Frameworks" 
 
 echo "Completing bundle: $bundle"
 cd "$bundle"
-fw_basepath=$(dirname $(pwd))
-todo=$(find ./ | \
+todo=$(find ./ -perm +0111 ! -type d | \
         xargs --replace=line file 'line' | \
         sed -n 's/^\([^:][^:]*\):[[:space:]]*Mach-O executable ppc$/\1/p' | \
         xargs echo -n \
@@ -22,6 +21,13 @@ while test "$todo" != ""; do
 	todo_old=$todo ;
 	todo="" ;
 	for todo_obj in $todo_old; do
+		#Figure out the relative path from todo_obj to Contents/Frameworks
+		fw_relpath=$(echo "$todo_obj" |\
+			sed -n 's|^\(\.//*\)\(\([^/][^/]*/\)*\)[^/][^/]*$|\2|gp' | \
+			sed -n 's|[^/][^/]*/|../|gp' \
+		)"Contents/Frameworks"
+
+		#Find all libraries $todo_obj depends on, but skip system libraries
 		for lib in $(
 			otool -L $todo_obj | \
 			sed -n 's|^.*[[:space:]]\([^[:space:]]*\.dylib\).*$|\1|p' | \
@@ -30,22 +36,16 @@ while test "$todo" != ""; do
 			lib_bn="$(basename "$lib")" ;
 			if ! test -f "Contents/Frameworks/$lib_bn"; then
 				echo "Adding library: $lib_bn (because of: $todo_obj)"
-				case "$lib" in
-					/*)
-						cp "$lib" "Contents/Frameworks/$lib_bn"
-					;;
-					*)
-						cp "$fw_basepath/$lib" "Contents/Frameworks/$lib_bn"
-					;;
-				esac
+				cp "$lib" "Contents/Frameworks/$lib_bn"
+				chmod 755 "Contents/Frameworks/$lib_bn"
 				install_name_tool \
-					-id "@executable_path/../Frameworks/$lib_bn" \
+					-id "$lib_bn" \
 					"Contents/Frameworks/$lib_bn" || exit 1
 				todo="$todo Contents/Frameworks/$lib_bn"
 			fi
 			install_name_tool -change \
 				"$lib" \
-				"@executable_path/../Frameworks/$lib_bn" \
+				"@executable_path/$fw_relpath/$lib_bn" \
 				"$todo_obj" || exit 1
 		done
 	done
